--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						пройденных  курсов.  Все началось с вопроса : « Что мы можем
 						улучшить в месте, в котором проводим большую часть своего времени?»
 						А дальше возникла ИДЕЯ : Сделать электронный помощник , который
-						сможет познакомит посетителя с Образовательным центром и дать ответы
+						сможет познакомить посетителя с Образовательным центром и дать ответы
 						на часто задаваемые вопросы
 					</p>
 				</div>
@@ -140,7 +140,7 @@
 				</div>
 				<p class="hh2">
 					они занимались визуалом всего проекта, в том числе и сайта-презентации
-					(так что все что вы видите - их рук дела)
+					(так что все что вы видите - их рук дело)
 				</p>
 			</div>
 		</div>
@@ -265,15 +265,13 @@
 										alt="User"
 									/>
 								</div>
-								<div class="reviewer-name">Александра Московская</div>
+								<div class="reviewer-name">Максим Кобрусев</div>
 							</div>
 							<div class="review-text">
-								Ребята большие молодцы! Проделанная - работа это огромный труд!
-								Очень интересная идея по созданию физического устройства с
-								различными выражениями лиц. Очень нравятся широкие возможности
-								телеграмм-бота. Удобно, что всю нужную информацию можно найти
-								здесь. Большая благодарность сотрудникам академии за
-								предоставленную возможность развиваться.
+								Ребята — молодцы! Проделали колоссальную работу.  
+								Идея с «лицевым» девайсом — огонь.  
+								Телеграм-бот функционален: всё под рукой.  
+								Спасибо академии за шанс расти!.
 							</div>
 						</div>
 						<div class="review-card">
@@ -284,15 +282,13 @@
 										alt="User"
 									/>
 								</div>
-								<div class="reviewer-name">Александра Московская</div>
+								<div class="reviewer-name">Алексей Ковалёв</div>
 							</div>
 							<div class="review-text">
-								Ребята большие молодцы! Проделанная - работа это огромный труд!
-								Очень интересная идея по созданию физического устройства с
-								различными выражениями лиц. Очень нравятся широкие возможности
-								телеграмм-бота. Удобно, что всю нужную информацию можно найти
-								здесь. Большая благодарность сотрудникам академии за
-								предоставленную возможность развиваться.
+								Ребята, вы просто космос! Такой объём задач — это нечто невообразимое.  
+								Идея «живого» железа с эмоциями лица зацепила сразу.  
+								Бот в телеграме вмещает всё: и FAQ, и статус, и пароли.  
+								Спасибо команде академии за площадку, где можно прокачаться!
 							</div>
 						</div>
 					</div>
@@ -375,3 +371,4 @@
 		<script src="script.js"></script>
 	</body>
 </html>
+
