--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					</div>
 					<div class="rhd2-d2">
 						<p class="rhd2d2-p1" style="overflow: hidden">
-							посмотрите, это HELPIt, и это его начальная версия.
+							посмотрите, это HELPIT, и это его начальная версия.
 						</p>
 						<p class="rhd2d2-p2">
 							предлагаю узнать историю его создания, и заодно увидеть, как он
@@ -371,4 +371,5 @@
 		<script src="script.js"></script>
 	</body>
 </html>
+
 
